# bionemo-framework-From-NVIDIA

./: .dockerignore  .gitignore  .gitmodules  .nspect-allowlist.toml  .pre-commit-config.yaml  .secrets-nb.baseline  .secrets.baseline  CODE-REVIEW.md  CODEOWNERS  CONTRIBUTING.md  Dockerfile  README.md  justfile  launch.sh  pyproject.toml  requirements-cve.txt  requirements-dev.txt  requirements-test.txt  requirements.txt  setup.cfg  tach.toml  tach.yml
.devcontainer/: devcontainer.json  initializeCommand.sh  (+1 more)
internal/infra-bionemo/: README.md  pyproject.toml  setup.py
internal/infra-bionemo/src/infra_bionemo/: license_check.py
internal/infra-bionemo/src/infra_bionemo/new_project/: api.py  templates.py  utils.py
internal/infra-bionemo/src/infra_bionemo/new_project/exe/: bionemo_subpackage.py  namespace.py  simple.py
internal/infra-bionemo/tests/test_infra_bionemo/: test_license_check.py
internal/infra-bionemo/tests/test_infra_bionemo/test_new_project/: test_api.py  test_cli_tools.py  test_utils.py
src/bionemo-contrib/: _requirements.txt  pyproject.toml
src/bionemo-contrib/src/bionemo/contrib/data/: preprocess.py
src/bionemo-contrib/src/bionemo/contrib/model/: biobert.py
src/bionemo-contrib/src/bionemo/contrib/tokenizer/: label2id_tokenizer.py
sub-packages/bionemo-contrib/: README.md  _requirements.txt  pyproject.toml  requirements.txt
sub-packages/bionemo-contrib/src/bionemo/contrib/: lightning.py
sub-packages/bionemo-contrib/src/bionemo/contrib/data/: mapped_dataset.py  preprocess.py  resamplers.py  utils.py
sub-packages/bionemo-contrib/src/bionemo/contrib/model/: layers.py  loss.py
sub-packages/bionemo-contrib/src/bionemo/contrib/testing/: lightning_basic.py  megatron_parallel_state_utils.py  utils.py
sub-packages/bionemo-contrib/src/bionemo/contrib/tokenizer/: gene_tokenizer.py  label2id_tokenizer.py
sub-packages/bionemo-contrib/src/bionemo/contrib/utils/: batching_utils.py  dtypes.py  logger_utils.py  random_utils.py  remote.py  weight_utils.py
sub-packages/bionemo-contrib/tests/bionemo/contrib/: test_basic.py  test_lightning.py  test_lightning_basic_autoencoder_example.py
sub-packages/bionemo-contrib/tests/bionemo/contrib/data/: test_resamplers.py
sub-packages/bionemo-contrib/tests/bionemo/contrib/model/: test_loss.py
sub-packages/bionemo-contrib/tests/bionemo/contrib/utils/: test_dtypes.py  test_logger_utils.py
sub-packages/bionemo-core/: README.md  pyproject.toml  requirements.txt  setup.py
sub-packages/bionemo-core/src/bionemo/core/: __init__.py  api.py
sub-packages/bionemo-core/src/bionemo/core/data/: README.md  api.py  load.py  multi_epoch_dataset.py  permute.py  resamplers.py  resource.py
sub-packages/bionemo-core/src/bionemo/core/model/: config.py
sub-packages/bionemo-core/src/bionemo/core/utils/: batching_utils.py  dtypes.py  random_utils.py
sub-packages/bionemo-core/tests/bionemo/core/: test_todo.py
sub-packages/bionemo-core/tests/bionemo/core/data/: test_load.py  test_load_notebook.ipynb  test_resource.py
sub-packages/bionemo-core/tests/bionemo/core/utils/: test_dtypes.py
sub-packages/bionemo-core/tests/bionemo/pytorch/data/: test_multi_epoch_dataset.py  test_permute.py  test_resamplers.py
sub-packages/bionemo-esm2/: LICENSE  README.md  _requirements-test.txt  _requirements.txt  pyproject.toml
sub-packages/bionemo-esm2/src/bionemo/esm2/: api.py
sub-packages/bionemo-esm2/tests/bionemo/esm2/: conftest.py  test_esm2_attention.py  test_esm2_model.py  test_esm2_utils.py
sub-packages/bionemo-example_model/: README.md  pyproject.toml  setup.py
sub-packages/bionemo-example_model/src/bionemo/example_model/: __init__.py  lightning_basic.py
sub-packages/bionemo-example_model/tests/bionemo/example_model/: test_lightning_basic.py
sub-packages/bionemo-fw/: README.md  _requirements.txt  pyproject.toml  requirements.txt  setup.py
sub-packages/bionemo-fw/tests/bionemo/fw/: test_sub_package_imports.py  test_todo.py
sub-packages/bionemo-geneformer/: README.md  pyproject.toml
sub-packages/bionemo-geneformer/scripts/: README.md  geneformer_mlm_loss_eval.py
sub-packages/bionemo-geneformer/src/bionemo/geneformer/: api.py
sub-packages/bionemo-geneformer/tests/bionemo/geneformer/: conftest.py  test_dataset.py  test_model.py  test_stop_and_go.py  test_transformer_specs.py
sub-packages/bionemo-geometric/: README.md  pyproject.toml  requirements.txt  setup.py
sub-packages/bionemo-geometric/tests/bionemo/geometric/: test_bionemo_geometric.py
sub-packages/bionemo-llm/: README.md  _requirements.txt  pyproject.toml  requirements.txt
sub-packages/bionemo-llm/src/bionemo/llm/: api.py  lightning.py  train.py
sub-packages/bionemo-llm/tests/bionemo/llm/: test_lightning.py  test_lightning_basic_autoencoder_example.py
sub-packages/bionemo-llm/tests/bionemo/nemo_mega/: test_lightning.py
sub-packages/bionemo-scdl/: README.md  pyproject.toml  requirements.txt
sub-packages/bionemo-scdl/examples/: example_notebook.ipynb  filtering.ipynb
sub-packages/bionemo-scdl/scripts/: convert_h5ad_to_scdl.py
sub-packages/bionemo-scdl/tests/bionemo/scdl/: conftest.py
sub-packages/bionemo-size-aware-batching/: README.md  pyproject.toml
sub-packages/bionemo-size-aware-batching/src/bionemo/size_aware_batching/: sampler.py  utils.py
sub-packages/bionemo-size-aware-batching/tests/bionemo/size_aware_batching/: conftest.py  test_sampler.py  test_utils.py
sub-packages/bionemo-testing/: README.md  pyproject.toml  requirements.txt
sub-packages/bionemo-testing/src/bionemo/testing/: callbacks.py  lightning.py  megatron_dataset_compatibility.py  megatron_parallel_state_utils.py  testing_callbacks.py  torch.py  utils.py
sub-packages/bionemo-testing/tests/bionemo/testing/: test_lightning_basic.py  test_megatron_dataset_compatibility.py  test_megatron_parallel_state_utils.py
sub-packages/bionemo-webdatamodule/: pyproject.toml  requirements.txt
sub-packages/bionemo-webdatamodule/src/bionemo/webdatamodule/: datamodule.py  utils.py
sub-packages/bionemo-webdatamodule/tests/bionemo/webdatamodule/: conftest.py  test_datamodule.py
(+258 files in other folders)
