[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bionemo"
version = "2.0.0"
license.file = "LICENSE"
readme = "README.md"
description = "BioNeMo"
authors = [
    { name = "John St. John", email = "jstjohn@nvidia.com" },
    { name = "Malcolm Greaves", email = "mgreaves@nvidia.com" },
]
# dependencies are defined w/in namespace packages
dependencies = [
  "bionemo-fw",
  "bionemo-contrib",
]

[tool.setuptools.packages.find]
where = ["src"]
include=["bionemo.*"]
namespaces = true
exclude = ["test*."]

[tool.coverage.run]
source = ["bionemo", "examples"]

[tool.black]
line-length = 119
target-version = ['py310']
skip-string-normalization = true

[tool.ruff]
ignore = ["C901", "E741", "E501",]
# Run `ruff linter` for a description of what selection means.
select = ["C", "E", "F", "I", "W",]
line-length = 119

# Ignore import violations in all `__init__.py` files.
[tool.ruff.per-file-ignores]
"__init__.py" = ["E402", "F401", "F403", "F811",]

[tool.ruff.isort]
lines-after-imports = 2
known-first-party = ["bionemo"]

[tool.ruff.pydocstyle]
convention = "google"
