[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

# We can likely clean up the meta-package once https://github.com/astral-sh/uv/issues/6935 has a resolution.
[project]
name = "bionemo-meta"
version = "2.0.0"
license.file = "LICENSE/license.txt"
readme = "README.md"
description = "BioNeMo meta-package."
authors = [{ name = "BioNeMo Team", email = "bionemofeedback@nvidia.com" }]
dependencies = [
    'bionemo-core',
    'bionemo-esm2',
    'bionemo-example_model',
    'bionemo-fw',
    'bionemo-geneformer',
    'bionemo-llm',
    'bionemo-scdl',
    'bionemo-testing',
    'bionemo-webdatamodule',
    'nemo_run',
    'torch==2.3.*',
]


[tool.black]
line-length = 119
target-version = ['py310']
skip-string-normalization = true

[tool.ruff]
line-length = 119

[tool.ruff.lint]
ignore = ["C901", "D100", "E501", "E741", "RUF005", "RUF010"]
select = [
    "C",   # Pylint conventions
    "D",   # Documentation formatting
    "E",   # style stuff, whitespaces
    "F",   # important pyflakes lints
    "I",   # import sorting
    "RUF", # Some Ruff-specific lints, unused noqas, etc.
    "W",   # Pylint warnings
]

# Ignore import violations in all `__init__.py` files.
[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["D104", "E402", "F401", "F403", "F811"]
"test_*.py" = ["D"]
"scripts/*.py" = ["D"]

[tool.ruff.lint.isort]
lines-after-imports = 2
known-first-party = ["bionemo"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pytest.ini_options]
norecursedirs = ["3rdparty"]
addopts = ["--ignore=3rdparty"]

[tool.pyright]
include = ["./scripts/", "./sub-packages/"]
exclude = ["*/tests/"]
executionEnvironments = [
    { "root" = ".", pythonVersion = "3.10", extraPaths = [
        "./3rdparty/Megatron-LM",
        "./3rdparty/NeMo",
        "./sub-packages/bionemo-core/src",
        "./sub-packages/bionemo-esm2/src",
        "./sub-packages/bionemo-example_model/src",
        "./sub-packages/bionemo-fw/src",
        "./sub-packages/bionemo-geneformer/src",
        "./sub-packages/bionemo-llm/src",
        "./sub-packages/bionemo-scdl/src",
        "./sub-packages/bionemo-testing/src",
    ] },
]

[project.optional-dependencies]
build = ['flash-attn', 'pip']

[tool.uv]
dev-dependencies = [
    "click",
    "ipdb",
    "nbval",
    "pre-commit",
    "pyright",
    "ruff",
    "tach>=0.9.0",
    "tenacity",
]
no-build-isolation-package = ["flash-attn"]


[tool.uv.workspace]
members = ["3rdparty/*", "sub-packages/bionemo-*/"]

[tool.uv.sources]
nemo_run = { git = "https://github.com/NVIDIA/NeMo-Run", rev = "34259bd3e752fef94045a9a019e4aaf62bd11ce2" }
nemo_toolkit = { workspace = true }
megatron-core = { workspace = true }
bionemo-core = { workspace = true }
bionemo-esm2 = { workspace = true }
bionemo-example_model = { workspace = true }
bionemo-fw = { workspace = true }
bionemo-geneformer = { workspace = true }
bionemo-llm = { workspace = true }
bionemo-scdl = { workspace = true }
bionemo-testing = { workspace = true }
bionemo-webdatamodule = { workspace = true }
