[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bionemo-contrib"
version = "2.0.0"
license.file = "LICENSE"
readme = "README.md"
description = "BioNeMo Contrib: Preview of In-Development Features and Landing Ground for External Contributions. Breaking changes expected! No API stability guarentees!"
authors = [
    { name = "Eric Dawson", email = "edawson@nvidia.com" },
    { name = "Malcolm Greaves", email = "mgreaves@nvidia.com" },
    { name = "John St. John", email = "jstjohn@nvidia.com" },
    { name = "Steven Kothen-Hill", email = "skothenhill@nvidia.com" },
    { name = "Jonathan Mitchell", email = "jomitchell@nvidia.com" },
    { name = "Farhad Ramezanghorbani", email = "farhadr@nvidia.com" },
    { name = "Timur Rvachov", email = "trvachov@nvidia.com" },
]
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
# TODO: how to specify bionemo-fw ???

[tool.setuptools.packages.find]
where = ["src"]
include=["bionemo.*"]
namespaces = true
exclude = ["test*."]

