[build-system]
requires = ["setuptools-scm>=8", "setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bionemo-core"
readme = "README.md"
description = "BioNeMo core interfaces and PyTorch-related code."
authors = [{ name = "BioNeMo Team", email = "bionemofeedback@nvidia.com" }]
requires-python = ">=3.10"
license = { file = "LICENSE" }
dynamic = ["version"]
dependencies = [
    # bionemo sub-packages
    # external
    "numpy",
    "platformdirs",
    "torch>=2.2.1",
    'pytorch-lightning>=2.2.1',
    'lightning>=2.2.1',
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["bionemo.*"]
namespaces = true
exclude = ["test*."]

[tool.setuptools_scm]
root = '../..'  # Pull version information from the root directory.
# Increment versions with `.postN` suffixes, e.g., 0.0.1.post1, 0.0.1.post2, etc., where N is the number of commits
# between the current commit and the tag.
version_scheme = "post-release"
# Ignore 'dirty' repository state, e.g., uncommitted changes, since these are not reliable inside the docker container.
local_scheme = "no-local-version"

[tool.uv]
cache-keys = [{ git = true }]
