[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bionemo-core"
readme = "README.md"
description = "BioNeMo core interfaces and PyTorch-related code."
authors = [{ name = "BioNeMo Team", email = "bionemofeedback@nvidia.com" }]
requires-python = ">=3.10"
license = { file = "LICENSE" }
dynamic = ["version"]
dependencies = [
    # bionemo sub-packages
    # bionemo-core **MUST NOT** depend on any other sub-packages !!!!!
    # external
    "numpy",
    "platformdirs",
    "torch>=2.2.1",
    'boto3',
    'lightning>=2.2.1',
    'nest_asyncio',
    'ngcsdk',
    'pooch',
    'pydantic>=2.7.0',
    'pytorch-lightning>=2.2.1',
    'pyyaml',
    'tqdm',
]

[project.scripts]
download_bionemo_data = "bionemo.core.data.load:entrypoint"

# Make sure that the resource yaml files are being packaged alongside the python files.
[tool.setuptools.package-data]
"bionemo.core" = ["**/*.yaml"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["bionemo.*"]
namespaces = true
exclude = ["test*."]

[tool.setuptools.dynamic]
version = { file = "VERSION" }

[tool.uv]
cache-keys = [{ git = true }]
