[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bionemo-example_model"
license.file = "LICENSE"
readme = "README.md"
description = "BioNeMo example_model: Example model for documentation and tutorials. Do Not Distriburte on PyPI !!"
authors = [
    { name = "BioNeMo Team", email = "bionemofeedback@nvidia.com" }
]
dynamic = ["dependencies", "version"]

[tool.setuptools.packages.find]
where = ["src"]
include=["bionemo.*"]
namespaces = true
exclude = ["test*."]
