[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bionemo-fw"
license.file = "LICENSE"
readme = "README.md"
description = "BioNeMo Framework (FW): Production grade framework for AI-enabled Drug Discovery. Consists of all independently installable bionemo feature packages too."
authors = [
    { name = "BioNeMo Team", email = "bionemofeedback@nvidia.com" }
]
dynamic = ["dependencies", "version"]

[tool.setuptools.packages.find]
where = ["src"]
include=["bionemo.*"]
namespaces = true
exclude = ["test*."]
