[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[options]
zip_safe = true
include_package_data = true

[project]
name = "bionemo-geometric"
authors = [
    { name = "BioNeMo Team", email = "bionemofeedback@nvidia.com" }
]
description = "BioNeMo component library for graphical neural networks (GNNs) solving drug discovery problems."
readme = "README.md"
requires-python = ">=3.10"
keywords = []
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Private :: Do Not Upload",
]
dynamic = ["dependencies", "version"]

[tool.setuptools.packages.find]
where = ["src"]
include=["bionemo.*"]
namespaces = true
exclude = ["test*."]
