[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bionemo-scdl"
license.file = "LICENSE"
readme = "README.md"
description = "SCDL, a Dataset class for Single Cell data."
authors = [
    { name = "BioNeMo Team", email = "bionemofeedback@nvidia.com" }
]
dynamic = ["dependencies", "version"]

[project.scripts]
convert_h5ad_to_scdl = "bionemo.scdl.scripts.convert_h5ad_to_scdl:main"

[tool.setuptools.packages.find]
where = ["src"]
include=["bionemo.*"]
namespaces = true
exclude = ["test*."]
