[build-system]
requires = ["setuptools-scm>=8", "setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bionemo-scdl"
license.file = "LICENSE"
readme = "README.md"
description = "SCDL, a Dataset class for Single Cell data."
authors = [{ name = "BioNeMo Team", email = "bionemofeedback@nvidia.com" }]
dynamic = ["version"]
dependencies = [
    'anndata>=0.10.7',
    'bionemo-core',
    'numpy>=1.26.0',
    'pandas>=2.2.1',
    'pyarrow>=16.0.0',
    'scipy>=1.11.1',
    'torch>=2.1.0',
]

[project.scripts]
convert_h5ad_to_scdl = "bionemo.scdl.scripts.convert_h5ad_to_scdl:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["bionemo.*"]
namespaces = true
exclude = ["test*."]

[tool.setuptools_scm]
root = '../..'
version_scheme = "post-release"
local_scheme = "no-local-version"

[tool.uv]
cache-keys = [{ git = true }]
