[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bionemo-scdl"
readme = "README.md"
description = "SCDL, a Dataset class for Single Cell data."
authors = [{ name = "BioNeMo Team", email = "bionemofeedback@nvidia.com" }]
requires-python = ">=3.10"
license = { file = "LICENSE" }
dynamic = ["version"]
dependencies = [
    # bionemo sub-packages
    'bionemo-core',
    # external
    'anndata>=0.11.0',
    'pandas>=2.2.1',
    'pyarrow>=16.0.0',
    'scipy>=1.11.1',
]

[project.scripts]
convert_h5ad_to_scdl = "bionemo.scdl.scripts.convert_h5ad_to_scdl:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["bionemo.*"]
namespaces = true
exclude = ["test*."]

[tool.setuptools.dynamic]
version = { file = "VERSION" }

[tool.uv]
cache-keys = [{ git = true }]
