[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

# For guidance, see: https://packaging.python.org/en/latest/guides/writing-pyproject-toml/
[project]
name = "bionemo-size-aware-batching"
version = "0.0.1"
authors = []
description = ""
readme = "README.md"
requires-python = ">=3.10"
keywords = []
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Private :: Do Not Upload",
]
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [ "ignore::DeprecationWarning",]

[tool.coverage.run]
source = ["bionemo"]

[tool.black]
line-length = 120
target-version = ['py310']

[tool.ruff]
lint.ignore = ["C901", "E741", "E501",]
# Run `ruff linter` for a description of what selection means.
lint.select = ["C", "E", "F", "I", "W",]
line-length = 120

# Ignore import violations in all `__init__.py` files.
[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "F401", "F403", "F811",]

[tool.ruff.lint.isort]
lines-after-imports = 2
known-first-party = ["bionemo"]

[tool.ruff.lint.pydocstyle]
convention = "google"
