[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bionemo-testing"
license.file = "LICENSE"
readme = "README.md"
description = "BioNeMo testing: utilities aiding test creation for bionemo packages. Do Not Distriburte on PyPI !!"
authors = [
    { name = "BioNeMo Team", email = "bionemofeedback@nvidia.com" }
]
dynamic = ["dependencies", "version"]

[project.scripts]
bionemo_test_data_path = "bionemo.testing.data.load:main_cli"

[tool.setuptools.packages.find]
where = ["src"]
include=["bionemo.*"]
namespaces = true
exclude = ["test*."]

# Make sure that the resource yaml files are being packaged alongside the python files.
[tool.setuptools.package-data]
"bionemo.testing" = ["**/*.yaml"]
