[build-system]
requires = ["setuptools-scm>=8", "setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bionemo-webdatamodule"
readme = "README.md"
description = "PyTorch Lightning Data Module for WebDataset files."
authors = [{ name = "BioNeMo Team", email = "bionemofeedback@nvidia.com" }]
requires-python = ">=3.10"
license = { file = "LICENSE" }
dynamic = ["version"]
dependencies = ['bionemo-core', 'bionemo-llm', 'webdataset==0.2.96']

[tool.setuptools_scm]
root = '../..'
version_scheme = "post-release"
local_scheme = "no-local-version"

[tool.uv]
cache-keys = [{ git = true }]
